# compinfo_ai

./: .gitignore  analys.py  analysis.py  arbeit.py  cpu_temp.js  cpu_temp.py  data.csv  data.db  main.py  pyproject.toml  requirements.txt  test.py  test_arbeit.ipynb  test_arbeit.py  utils.py  vanya.db  vanya.py  vanya.txt
LSTM/: mega_modul.py
LSTM/models/: cpu_usage_if_gpu.h5  cpu_usage_if_not_gpu.h5  gpu_usage.h5  ram_usage_if_gpu.h5  ram_usage_if_not_gpu.h5  temp_cpu_if_gpu.h5  temp_cpu_if_not_gpu.h5  temp_gpu.h5
LSTM/models/scalers/: cpu_usage_if_gpu_scaler.pkl  temp_cpu_if_not_gpu_scaler.pkl
Models_new_LSTM/: model_if_gpu.h5
Models_new_LSTM/scalers/: scaler_if_gpu.pkl
arbeitAI/: __init__.py  model.py  predict.py  ram_usage.py  temp_cpu.py  temp_gpu.py  usage_cpu.py  usage_gpu.py
pages/: chart.py  now.py  settings.json  settings.py
pages/localisation/: en.json  ru.json
src/: analysis.py  data.csv  main.py  package-lock.json  package.json  requirements.txt  train.py
src/LSTM/: mega_modul.py
src/LSTM/models/: cpu_usage_if_gpu.h5  gpu_usage.h5  ram_usage_if_gpu.h5  temp_cpu_if_gpu.h5  temp_gpu.h5
src/arbeitAI/: __init__.py  model.py  new_predict.py  predict.py  temp_cpu.py  temp_gpu.py  utils.py
src/arbeitAI/models/: if_not_gpu.h5
src/pages/: chart.py  now.py  settings.json
src/pages/localisation/: ru.json
vanya_analizator/: arbeit_module.py
vanya_analizator/models/: model_cpu_usage_if_gpu.pkl  model_gpu_usage_if_gpu.pkl  model_ram_usage_if_gpu.pkl  model_temp_cpu_if_gpu.pkl  model_temp_gpu_if_gpu.pkl
(+2 files in other folders)
